src/test/resources/error/error01.spl


def hello() {
    print(a)
}

hello()
